# Projet-Ecarlate

./: CMakeLists.txt  Candle.h  HistoricalData.cpp  HistoricalData.h  Indicator.h  Options.cpp  Options.h  README.md  TODO + planning.txt  input.csv  main.cpp  output.csv  output3h.csv  output3h2.csv  output3h2m.csv
NN/: neurnet.R  obj_val.R  output.csv
indicators/: BollingerBands.cpp  BollingerBands.h  MACD.cpp  MACD.h
